# hbqj

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
HaiBinQiangJia/: CMakeLists.txt  HaiBinQiangJia.vcxproj
HaiBinQiangJia/include/ff/: FFLog.h
bgpop/: CMakeLists.txt  dllmain.cpp
bgpop/src/: dllmain.cpp
bgpop/src/include/: d3d_manager.h  game_camera.h  imgui_manager.h  logger.h  math_utils.h  pch.h
bgpop/src/include/mhook/disasm-lib/: cpu.h
boogiepop/: CMakeLists.txt  boogiepop.vcxproj
client/: CMakeLists.txt
client/src/: main.cpp
client/src/fonts/: roboto.h
client/src/ui/: debug_window.h  place_item_tab.h  save_and_load_tab.h  ui.h
hbqj/: CMakeLists.txt
hbqj/include/utils/: SystemInfo.h
hbqj/src/: hook.cpp  memory.cpp  process.cpp  signature_manager.cpp  signature_scanner.cpp
hbqj/src/include/: error.h  file.h  hook.h  log.h  macro.h  memory.h  process.h  signature_manager.h  signature_scanner.h  struct.h
hbqj/src/include/ff/: FFLog.h  FFProcess.h  OffsetMgr.h
hbqj/src/include/utils/: md5.h  scoped_timer.h
hbqj/test/: CMakeLists.txt  file_test.cpp  hook_test.cpp  log_test.cpp  main_test.cpp  memory_test.cpp  signature_manager_test.cpp  signature_scanner_test.cpp
namazu/: CMakeLists.txt
namazu/src/: dllmain.cpp
namazu/src/include/: game_camera.h  game_memory.h  global_state.h  imgui_manager.h  load_housing.h  math_utils.h  preview_housing.h
rosewood/: CMakeLists.txt
rosewood/src/: dllmain.cpp  file.cpp  hook.cpp  memory.cpp  memory_operation.cpp  process.cpp  signature_manager.cpp
rosewood/src/file/decryption/: aes_decryptor.cpp
rosewood/src/include/: error.h  file.h  game_process.h  hook.h  ipc.h  layout_loader.h  log.h  memory_operation.h  process.h  signature_manager.h  signature_scanner.h  struct.h
rosewood/src/include/ff/: FFHook.h  FFProcess.h
rosewood/src/include/file/: file_reader.h
rosewood/src/include/file/csv/: reader.h
rosewood/src/include/file/decryption/: aes_decryptor.h  decryption_handler.h
rosewood/src/include/file/deserialization/: deserializer.h  hbqj_deserializer.h  legacy_deserializer.h
rosewood/src/include/file/struct/: hbqj.h  legacy.h
rosewood/src/include/ipc/: event_manager.h  heart_beat.h  ipc.h  poller.h  process_resources.h  shared_memory_reader.h  shared_memory_struct.h  struct.h
rosewood/src/include/utils/: sigscanner.h  string_utils.h
rosewood/test/: CMakeLists.txt  file_test.cpp  hook_test.cpp  ipc_test.cpp  layout_loader_test.cpp  log_test.cpp  macro_test.cpp  memory_test.cpp  signature_manager_test.cpp
rosewood/test/file/: file_reader_test.cpp
rosewood/test/file/csv/: reader_test.cpp
rosewood/test/file/decryption/: decryption_test.cpp
rosewood/test/file/deserialization/: deserialization_test.cpp
rosewood/test/ipc/: heart_beat_test.cpp
rosewood/test/utils/: string_utils_test.cpp
test/: CMakeLists.txt  test.cpp
updater/: CMakeLists.txt  main.cpp
