set(PROJECT_NAME test)

################################################################################
# Source groups
################################################################################
set(ALL_FILES
        "test.cpp"
)

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} ${ALL_FILES})

################################################################################
# Compile definitions
################################################################################
target_compile_definitions(${PROJECT_NAME} PRIVATE
        UNICODE
        _UNICODE
)

################################################################################
# Compile and link options
################################################################################
if (MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
            /permissive-
            /W3
    )

    target_link_options(${PROJECT_NAME} PRIVATE
            /DEBUG
            /SUBSYSTEM:CONSOLE
    )
endif ()
